# stark-ode

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  asv.conf.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
benchmarks/: DESIGN.md  README.md  __init__.py  builders.py  catalogue.py  common.py  time_algebraist.py  time_engine_generated.py  time_fput_explicit.py  time_interface.py  time_ivp.py
benchmarks/algebraist/: __init__.py  timing_explicit.py  timing_imex_adaptive.py  timing_implicit_fixed.py
benchmarks/brusselator_2d/: README.md  report.py  scipy.py  stark.py
benchmarks/experiments/: __init__.py  probe_krylov_inverter.py  timing_cupy_specialists.py  timing_relaxation_inverters.py  timing_robertson_kvaerno5_dense.py
benchmarks/fitzhugh_nagumo_1d/: README.md  __init__.py  common.py  diffrax.py  report.py  scipy.py  stark.py
benchmarks/fput/: report.py  scipy.py  stark.py
benchmarks/inverters/: README.md  __init__.py  bench_defect.py  bench_inverter_refactor.py  bench_jacobi.py  bench_new_inverters.py  bench_richardson.py
benchmarks/problems/: __init__.py  harmonic_oscillator.py  large_linear_chain.py  problem.py  reaction_diffusion_array.py  robertson.py  scalar_decay.py  van_der_pol_stiff.py
benchmarks/resolvents/: README.md  __init__.py  bench_resolvent_refactor.py
benchmarks/robertson/: README.md  __init__.py  common.py  diffrax.py  report.py  scipy.py  stark.py
benchmarks/schemes/: README.md  bench_scheme_refactor.py
competition/: README.md  __init__.py  __main__.py  check_reports.py  runner.py
competition/allen_cahn_1d/: README.md  __init__.py  common.py  diffrax.py  operator.py  report.py  scipy.py  stark.py
competition/brusselator_2d/: README.md  __init__.py  diffrax.py  report.py  scipy.py  stark.py
competition/fitzhugh_nagumo_1d/: README.md  common.py  diffrax.py  report.py  scipy.py  stark.py
competition/fput/: __init__.py  common.py  diffrax.py  report.py  scipy.py  stark.py
competition/hires/: README.md  __init__.py  common.py  diffrax.py  report.py  scipy.py  stark.py
competition/robertson/: diffrax.py  report.py  scipy.py  stark.py
devtools/: README.md  _common.ps1  build-docs.ps1  check-benchmarks.ps1  check-docs-consistency.ps1  check-forbidden-imports.ps1  check-release-surface.ps1  check-types.ps1  clean-caches.ps1  find-imports.ps1  grep-context.ps1  list-design-todos.ps1  list-package-modules.ps1  list-stark-classes.ps1  rename-python-module.ps1  rename-python-package.ps1  rename-symbol.ps1  run-everything.ps1
docs/: README.md  benchmarking.md  concepts.md  conf.py  contract-maths.md  contracts-math.md  contracts_math.md  diagnostics.md  engines.md  examples.md  extending.md  foreign-models.md  getting-started.md  house_style.md  implicit.md  index.md  interface.md  methods.md  object_map.md  problem.md
docs/contributing/: README.md  algebraist_backends.md  benchmarking.md  house-style.md  house_style.md
docs/reference/: core.md  diagnostics.md  engines.md  index.md  methods.md  stark.md  (+1 more)
examples/: README.md  __init__.py  __main__.py  allen_cahn.ipynb  manifest.py  manual_marcher_setup.py  runner.py  three_body.ipynb  three_body_stark.ipynb
stark/: DESIGN.md  __init__.py  algebraist.py  audit.py  auditor.py  butcher_tableau.py  contracts.py  control.py  conventions.py  integrate.py  interval.py  jit.py  marcher.py  monitor.py  regulator.py  routing.py  safety.py  scheme_descriptor.py  scheme_workspace.py  tolerance.py
tests/: DESIGN.md  __init__.py  support.py  test_audit.py  test_conventions.py  test_engines.py  test_implicit.py  test_integrate.py  test_interface_frame.py  test_interface_layout.py  test_inverter.py  test_method.py  test_monitor.py  test_monitor_inverter.py  test_monitor_inverter_records.py  test_package.py  test_resolvent.py  test_resolver.py  test_routing.py  test_scheme.py  test_slow_fitzhugh_nagumo.py  test_slow_scheme_accuracy.py  test_system.py
(+1555 files in other folders)
