[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stark-ode"
version = "0.1.0b2"
description = "State Translation Adaptive Runge Kutta"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jonathan M. Fellows" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]
keywords = ["ode", "runge-kutta", "numerics", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "jax>=0.4",
    "numpy>=1.26",
    "numba>=0.60",
    "pyright>=1.1",
    "pytest>=8.0",
    "scipy>=1.13",
    "twine>=5",
    "wheel>=0.43",
]
accelerators = [
    "jax>=0.4",
    "numba>=0.60",
]
examples = [
    "jax>=0.4",
    "matplotlib>=3.8",
    "numba>=0.60",
]
docs = [
    "myst-parser>=2",
    "pydata-sphinx-theme>=0.15",
    "sphinx>=7",
    "sphinx-copybutton>=0.5",
]
comparison = [
    "diffrax>=0.6",
    "jax>=0.4",
    "numba>=0.60",
    "numpy>=1.26",
    "scipy>=1.13",
]
asv = [
    "asv>=0.6",
    "numpy>=1.26",
    "virtualenv>=20",
]

[project.urls]
Homepage = "https://github.com/stark-numerics/stark-ode"
Repository = "https://github.com/stark-numerics/stark-ode"
Issues = "https://github.com/stark-numerics/stark-ode/issues"

[tool.setuptools.packages.find]
include = ["stark*", "examples*", "competition*"]
exclude = ["examples.local*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
markers = [
    "performance: local performance/smoke checks that are not strict correctness tests",
]
